refactor: rename all entities properties to use camel-case instead of snake-case
