# src/modules/cars/models/Specification.model.ts
@@ -4,8 +4,8 @@ export class Specification {
   readonly id: string;
   name: string;
   description: string;
-  created_at: Date;
-  updated_at: Date;
+  createdAt: Date;
+  updatedAt: Date;
 
   constructor() {
     if (!this.id) {
